# Tutoria

./: .env.example  .gitignore  Procfile  README.md  docker-compose.yml  requirements.txt
client/: .dockerignore  Dockerfile  angular.json  package-lock.json  package.json  server.js  update-env.js
client/src/: common-variables.scss  dark-theme.scss  index.html  light-theme.scss  styles.scss
client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  (+3 more)
client_ng/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
client_ng/src/: styles.css
server_axum/: Cargo.toml
server_axum/src/: main.rs
server_django/: .env.exmaple  .gitignore  Procfile  build.sh  pytest.ini  release.sh  requirements.txt
server_django/chat/: consumers.py  models.py  serializers.py  urls.py  views.py
server_django/courses/: admin.py  models.py
server_django/notifications/: consumers.py  models.py  serializers.py  signals.py  urls.py  views.py
server_django/posts/: admin.py  filters.py  models.py  tests.py
server_django/profiles/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
server_django/server/: api_urls.py  asgi.py  settings.py  urls.py
server_django/subjects_and_courses/: apps.py  models.py
server_django/tutoring_sessions/: admin.py  models.py
server_django/user/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
server_nest/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
server_nest/src/: app.module.ts  main.ts  mikro-orm.config.ts
(+246 files in other folders)
