[package]
name = "server_axum"
version = "0.1.0"
edition = "2021"

[dependencies]

# server
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"

# sql
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"]}

# serde, for serializing and deserializing structs
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"

# env
dotenvy = "0.15.7"
